@@ -1,6 +1,6 @@
 Package: Rcmdr
 Version: 2.0-1
-Date: 2013/08/26
+Date: 2013/09/12
 Title: R Commander
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Milan", "Bouchet-Valat", role = "aut"),
